# substack-newsletters-search-course

./: .env.example  SETUP_GUIDE.md  pyproject.toml
src/configs/: feeds_rss.yaml
